<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/bg_round_white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:paddingEnd="@dimen/padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivClose"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="12dp"
                android:src="@drawable/ic_close"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/initialising_fingerprints"
                android:textColor="@color/black"
                android:textSize="@dimen/header"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivClose" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:gravity="center"
                android:text="@string/please_wait_for_to_initialise_the_nfingerprints_session"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="The fingerprint provided does not match the details used during registration. Please try again using the registered fingerprint." />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clFingerprint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMessage"
                app:layout_constraintVertical_bias=".2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivFingerprint"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="@dimen/margin"
                    android:src="@drawable/ic_android_fingerprint_infra_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-10dp"
                    android:layout_marginBottom="-10dp"
                    android:src="@drawable/ic_success"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/ivFingerprint"
                    app:layout_constraintEnd_toEndOf="@id/ivFingerprint"
                    tools:visibility="visible" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:indeterminateTint="#818181"
                android:text="@string/initializing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clFingerprint"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</layout>
