<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/barrierBtn"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivLeftFingerGif"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:scaleX="-1"
                android:src="@drawable/avd_fingerpoint"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/ivRightFingerGif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRightFingerGif"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:src="@drawable/avd_fingerpoint"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivLeftFingerGif"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvScanFingerprints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scan_fingerprints"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivLeftFingerGif" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvScanMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center"
                android:text="@string/please_place_your_chosen_fingers_on_the_scanner_above"
                android:textColor="@color/black"
                android:textSize="@dimen/header_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScanFingerprints" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivScannerLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_android_fingerprint_grey"
                app:layout_constraintEnd_toStartOf="@id/ivScannerRight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScanMessage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLeftQuality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerLeft"
                app:layout_constraintStart_toStartOf="@id/ivScannerLeft"
                app:layout_constraintTop_toBottomOf="@id/ivScannerLeft"
                tools:text="100%" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatusLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textColor="@color/robinEggBlue"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerLeft"
                app:layout_constraintStart_toStartOf="@id/ivScannerLeft"
                app:layout_constraintTop_toBottomOf="@id/tvLeftQuality"
                tools:text="Place your finger on the sensor." />

            <!-- Raw liveness against the threshold actually programmed into this reader, so the
                 percentage above never has to be taken on trust. -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLeftLiveness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textColor="@color/liveness_neutral"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerLeft"
                app:layout_constraintStart_toStartOf="@id/ivScannerLeft"
                app:layout_constraintTop_toBottomOf="@id/tvStatusLeft"
                tools:text="Liveness 41230 / 32768" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivScannerRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_android_fingerprint_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivScannerLeft"
                app:layout_constraintTop_toTopOf="@id/ivScannerLeft" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRightQuality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerRight"
                app:layout_constraintStart_toStartOf="@id/ivScannerRight"
                app:layout_constraintTop_toBottomOf="@id/ivScannerRight"
                tools:text="100%" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatusRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textColor="@color/robinEggBlue"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerRight"
                app:layout_constraintStart_toStartOf="@id/ivScannerRight"
                app:layout_constraintTop_toBottomOf="@id/tvRightQuality"
                tools:text="Please lift your finger." />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRightLiveness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textColor="@color/liveness_neutral"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@id/ivScannerRight"
                app:layout_constraintStart_toStartOf="@id/ivScannerRight"
                app:layout_constraintTop_toBottomOf="@id/tvStatusRight"
                tools:text="Liveness 38940 / 32768" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@color/robinEggBlue"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                tools:text="@string/initializing" />

            <!--  <ScrollView
                  android:id="@+id/scrollView1"
                  android:layout_width="0dp"
                  android:layout_height="0dp"
                  android:layout_margin="@dimen/margin"
                  android:background="@color/message_window_background"
                  android:visibility="gone"
                  tools:visibility="visible"
                  app:layout_constraintBottom_toTopOf="@id/btnStart"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/tvStatus">


              </ScrollView>
      -->
            <LinearLayout
                android:id="@+id/messagesHolder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatus" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tvLeftLiveness,tvRightLiveness" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="btnStart,btnCancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/bg_round_white"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/start_scanning"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/bg_round_white"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

